Revert "Test Formatting check"
This reverts commit 1fc190d3459c696147e554f4239671bc9bc4ea8b.